pxc/tests/fixme_179_inh_struct/inhst6.px
public namespace inhst6;
import core::common -;

interface i0 {
  public function void m0();
}

struct s1 <i0> {
  public function void m0() { println("s1m0"); }
}

struct s2 <i0> {
  public function void m0() { println("s2m0"); }
}

struct s3 <i0, s1, s2> {
  public function void m0() { println("s3m0"); }
}

{
  s3 x;
  i0 mutable& xi = x; // error: i0 is an ambiguous base
  xi.m0();
  // s1 mutable& x1 = x;
  // x1.m0();
}
